# play-takeout-to-plex

./: README.md  README.rst  constraints.txt  pyproject.toml  requirements.txt  setup.cfg  songs.py  takeout_converter.py  tox.ini
.circleci/: config.yaml  config.yml
play_takeout_to_plex/: __init__.py  songs.py  takeout_converter.py
tests/: fixtures.py  test_play_takeout_to_plex.py  test_songs.py  test_takeout_converter.py
