[metadata]
name = play-takeout-to-plex-checkroth
version = 0.0.1
author = Charles Heckroth
author_email = checkroth@gmail.com
description = Re-name and re-structure google play music takeout to be plex friendly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Checkroth/google-music-takeout-to-plex
project_urls =
    Bug Tracker = https://github.com/Checkroth/google-music-takeout-to-plex/issues
classifiers =
    Programming Language :: Python :: 3.7
		Development Status :: 3 - Alpha
		Environment :: Console
		Intended Audience :: Developers
    License :: OSI Approved :: MIT License
		Natural Language :: English
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_script =
    takeout-converter = play_takeout_to_plex
